--- a/deploy/docker-compose.zookeeper-3.tmpl.yml
+++ b/deploy/docker-compose.zookeeper-3.tmpl.yml
@@ -53,9 +53,9 @@ volumes:
 
 configs:
   jmx-prometheus-javaagent:
-    name: ${JMX_PROMETHEUS_JAVA_AGENT_NAME:-jmx-prometheus-javaagent}
+    name: ${JMX_PROMETHEUS_JAVA_AGENT_NAME:-jmx-prometheus-javaagent-0.11.0}
     file: ./config/jmx_prometheus_javaagent-0.11.0.jar
 
   jmx-prometheus-config:
-    name: ${JMX_PROMETHEUS_CONFIG_NAME:-jmx-prometheus-config}
+    name: ${JMX_PROMETHEUS_CONFIG_NAME:-jmx-prometheus-config-0.11.0}
     file: ./config/config.yaml
