--- a/deploy/.env
+++ b/deploy/.env
@@ -1,4 +1,10 @@
 ZK_PORT=2181
-JMX_PORT=9999
+KAFKA_JMX_PORT=9999
 JMX_HTTP_PORT=9998
 LOG_LEVEL=ERROR
+ZOOKEEPER_TICK_TIME=2000
+ZOOKEEPER_INIT_LIMIT=5
+ZOOKEEPER_SYNC_LIMIT=2
+ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT=3
+ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL=24
+ZOOKEEPER_SERVERS=zk-1:2888:3888;zk-2:2888:3888;zk-3:2888:3888
