--- a/deploy/docker-compose.tmpl.yml
+++ b/deploy/docker-compose.tmpl.yml
@@ -1,26 +1,24 @@
 version: '3.5'
 
 services:
-  zookeeper-3:
-    image: confluentinc/cp-zookeeper:${IMAGE_TAG:-latest}
-    hostname: zk-3
+  zookeeper:
+    image: ${IMAGE_NAME:-confluentinc/cp-zookeeper}:${IMAGE_TAG:-latest}
+    hostname: zk-{{.Task.Slot}}
     environment:
-      - ZOOKEEPER_SERVER_ID=3
-      - ZOOKEEPER_CLIENT_PORT=${ZK_PORT}
-      - KAFKA_JMX_PORT=${JMX_PORT}
-      - ZOOKEEPER_TICK_TIME=2000
-      - ZOOKEEPER_INIT_LIMIT=5
-      - ZOOKEEPER_SYNC_LIMIT=2
-      - ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT=3
-      - ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL=24
-      - ZOOKEEPER_SERVERS=zk-1:2888:3888;zk-2:2888:3888;zk-3:2888:3888
-      - KAFKA_JMX_HOSTNAME=zk-3
-      - ZOOKEEPER_LOG4J_ROOT_LOGLEVEL=${LOG_LEVEL}
-      - KAFKA_OPTS=-javaagent:/jmx_prometheus_javaagent.jar=${JMX_HTTP_PORT}:/config.yaml
+      ZOOKEEPER_SERVER_ID: {{.Task.Slot}}
+      ZOOKEEPER_CLIENT_PORT: ${ZK_PORT}
+      KAFKA_JMX_PORT:
+      ZOOKEEPER_TICK_TIME:
+      ZOOKEEPER_INIT_LIMIT:
+      ZOOKEEPER_SYNC_LIMIT:
+      ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT:
+      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL:
+      ZOOKEEPER_SERVERS:
+      KAFKA_JMX_HOSTNAME: zk-{{.Task.Slot}}
+      ZOOKEEPER_LOG4J_ROOT_LOGLEVEL: ${LOG_LEVEL}
+      KAFKA_OPTS: -javaagent:/jmx_prometheus_javaagent.jar=${JMX_HTTP_PORT}:/config.yaml
     networks:
       kafka-net:
-        aliases:
-          - zk-3
       metric-net:
     configs:
       - source: jmx-prometheus-javaagent
@@ -33,10 +31,20 @@ services:
       - zk-secrets-vol:/etc/zookeeper/secrets
     healthcheck:
       test: echo ruok | nc localhost ${ZK_PORT}
-      interval: 30s
-      timeout: 5s
-      retries: 3
+      interval: 1m
+      timeout: 30s
+      retries: 20
       start_period: 2m
+    deploy:
+      mode: replicated
+      replicas: 3
+      restart_policy:
+        delay: 30s
+        window: 2m
+      update_config:
+        parallelism: 1
+        delay: 30s
+        order: stop-first
 
 networks:
   kafka-net:
@@ -50,7 +58,7 @@ networks:
 
 volumes:
   zk-secrets-vol:
-    name: ${ZK_SECRETS_VOL_NAME:-zk-3-secrets-vol}
+    name: ${ZK_SECRETS_VOL_NAME:-zk-{{.Task.Slot}}-secrets-vol}
 
 configs:
   jmx-prometheus-javaagent:
