Corrige nombre por defecto de volúmenes
Mueve el valor al fichero .env, ya que al contener llaves ({}) rompe la
sintaxis de valor por defecto de variable.

--- a/deploy/.env
+++ b/deploy/.env
@@ -8,3 +8,6 @@ ZOOKEEPER_SYNC_LIMIT=2
 ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT=3
 ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL=24
 ZOOKEEPER_SERVERS=zk-1:2888:3888;zk-2:2888:3888;zk-3:2888:3888
+ZK_SECRETS_VOL_NAME=zk-{{.Task.Slot}}-secrets-vol
+ZK_DATA_VOL_NAME=zk-{{.Task.Slot}}-data-vol
+ZK_LOG_VOL_NAME=zk-{{.Task.Slot}}-log-vol
