--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -27,8 +27,8 @@ x-prod-default-volume:
 volumes:
   zk-data-vol:
     << : *prod-default-volume
-    name: ${ZK_DATA_VOL_NAME:-zk-{{.Task.Slot}}-data-vol}
+    name: ${ZK_DATA_VOL_NAME}
 
   zk-log-vol:
     << : *prod-default-volume
-    name: ${ZK_LOG_VOL_NAME:-zk-{{.Task.Slot}}-log-vol}
+    name: ${ZK_LOG_VOL_NAME}
