--- a/deploy/docker-compose.zookeeper-2.dev.yml
+++ b/deploy/docker-compose.zookeeper-2.dev.yml
@@ -3,19 +3,18 @@ version: '3.5'
 services:
   zookeeper-2:
     environment:
-      - KAFKA_HEAP_OPTS=-Xmx128m -Xms128m
+      KAFKA_HEAP_OPTS: -Xmx128m -Xms128m
     deploy:
-      mode: replicated
-      replicas: 1
-      restart_policy:
-        delay: 30s
-        window: 2m
+      placement:
+        constraints:
+          - node.hostname == ${ZK_2_PLACEMENT_CONSTRAINTS_NODE_HOSTNAME:-hostname}
       resources:
         limits:
-          cpus: '0.5'
-          memory: 256M
+          cpus: '${RESOURCES_LIMITS_CPUS:-0.5}'
+          memory: ${RESOURCES_LIMITS_MEMORY:-256M}
         reservations:
-          memory: 205M
+          cpus: '${RESOURCES_RESERVATIONS_CPUS:-0.001}'
+          memory: ${RESOURCES_RESERVATIONS_MEMORY:-205M}
 
 volumes:
   zk-data-vol:
