--- a/deploy/docker-compose.zookeeper-2.tmpl.yml
+++ b/deploy/docker-compose.zookeeper-2.tmpl.yml
@@ -2,21 +2,21 @@ version: '3.5'
 
 services:
   zookeeper-2:
-    image: confluentinc/cp-zookeeper:${IMAGE_TAG:-latest}
+    image: ${IMAGE_NAME}:${IMAGE_TAG}
     hostname: zk-2
     environment:
-      - ZOOKEEPER_SERVER_ID=2
-      - ZOOKEEPER_CLIENT_PORT=${ZK_PORT}
-      - KAFKA_JMX_PORT=${JMX_PORT}
-      - ZOOKEEPER_TICK_TIME=2000
-      - ZOOKEEPER_INIT_LIMIT=5
-      - ZOOKEEPER_SYNC_LIMIT=2
-      - ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT=3
-      - ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL=24
-      - ZOOKEEPER_SERVERS=zk-1:2888:3888;zk-2:2888:3888;zk-3:2888:3888
-      - KAFKA_JMX_HOSTNAME=zk-2
-      - ZOOKEEPER_LOG4J_ROOT_LOGLEVEL=${LOG_LEVEL}
-      - KAFKA_OPTS=-javaagent:/jmx_prometheus_javaagent.jar=${JMX_HTTP_PORT}:/config.yaml
+      ZOOKEEPER_SERVER_ID: 2
+      KAFKA_JMX_HOSTNAME: zk-2
+      KAFKA_OPTS: -javaagent:${JMX_PROMETHEUS_JAVAAGENT_PATH}=${JMX_HTTP_PORT}:${JMX_PROMETHEUS_CONFIG_PATH}
+      ZOOKEEPER_CLIENT_PORT:
+      KAFKA_JMX_PORT:
+      ZOOKEEPER_TICK_TIME:
+      ZOOKEEPER_INIT_LIMIT:
+      ZOOKEEPER_SYNC_LIMIT:
+      ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT:
+      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL:
+      ZOOKEEPER_SERVERS:
+      ZOOKEEPER_LOG4J_ROOT_LOGLEVEL:
     networks:
       kafka-net:
         aliases:
@@ -24,28 +24,36 @@ services:
       metric-net:
     configs:
       - source: jmx-prometheus-javaagent
-        target: /jmx_prometheus_javaagent.jar
+        target: ${JMX_PROMETHEUS_JAVAAGENT_PATH}
       - source: jmx-prometheus-config
-        target: /config.yaml
+        target: ${JMX_PROMETHEUS_CONFIG_PATH}
     volumes:
       - zk-data-vol:/var/lib/zookeeper/data
       - zk-log-vol:/var/lib/zookeeper/log
       - zk-secrets-vol:/etc/zookeeper/secrets
     healthcheck:
       test: echo ruok | nc localhost ${ZK_PORT}
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 2m
+      interval: ${HEALTHCHECK_INTERVAL:-30s}
+      timeout: ${HEALTHCHECK_TIMEOUT:10s}
+      retries: ${HEALTHCHECK_RETRIES:10}
+      start_period: ${HEALTHCHECK_START_PERIOD:-2m}
+    deploy:
+      mode: replicated
+      replicas: ${REPLICAS:-1}
+      restart_policy:
+        delay: ${RESTART_DELAY:-30s}
+      update_config:
+        delay: ${UPDATE_DELAY:-1m}
 
 networks:
   kafka-net:
     name: ${KAFKA_NET_NAME:-kafka-net}
-    driver: overlay
+    driver: ${KAFKA_NET_DRIVER:-overlay}
     attachable: ${KAFKA_NET_ATTACHABLE:-true}
 
   metric-net:
     name: ${METRIC_NET_NAME:-metric-net}
+    driver: ${METRIC_NET_DRIVER:-overlay}
     external: true
 
 volumes:
