Combina config de despliegue en servicio único

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 include:
   - project: 'redmic-project/gitlab-ci-templates'
     ref: master
-    file: '/_deployment.yml'
+    file: '/deployment.yml'
 
 stages:
   - deploy
@@ -12,140 +12,5 @@ variables:
 .deploy:
   variables:
     STACK: ${PROJECT_PARENT_NAME}
+    SERVICES_TO_CHECK: ${PROJECT_PARENT_NAME}_${CI_PROJECT_NAME}
     DD_AWS_REGION: ${AWS_REGION}
-
-.deploy-development:
-  environment:
-    name: dev/${SERVICE_NAME}
-
-.deploy-production:
-  environment:
-    name: pro/${SERVICE_NAME}
-
-.deploy-zk-1:
-  variables: &deploy-zk-1-variables
-    SERVICE_NAME: zk-1
-    SERVICES_TO_CHECK: ${PROJECT_PARENT_NAME}_${CI_PROJECT_NAME}-1
-
-.deploy-zk-2:
-  variables: &deploy-zk-2-variables
-    SERVICE_NAME: zk-2
-    SERVICES_TO_CHECK: ${PROJECT_PARENT_NAME}_${CI_PROJECT_NAME}-2
-
-.deploy-zk-3:
-  variables: &deploy-zk-3-variables
-    SERVICE_NAME: zk-3
-    SERVICES_TO_CHECK: ${PROJECT_PARENT_NAME}_${CI_PROJECT_NAME}-3
-
-.deploy-zk-1-development:
-  extends: .deploy-development
-  variables:
-    COMPOSE_FILE: docker-compose.${CI_PROJECT_NAME}-1.tmpl.yml:docker-compose.${CI_PROJECT_NAME}-1.dev.yml
-    <<: *deploy-zk-1-variables
-
-.deploy-zk-2-development:
-  extends: .deploy-development
-  variables:
-    COMPOSE_FILE: docker-compose.${CI_PROJECT_NAME}-2.tmpl.yml:docker-compose.${CI_PROJECT_NAME}-2.dev.yml
-    <<: *deploy-zk-2-variables
-
-.deploy-zk-3-development:
-  extends: .deploy-development
-  variables:
-    COMPOSE_FILE: docker-compose.${CI_PROJECT_NAME}-3.tmpl.yml:docker-compose.${CI_PROJECT_NAME}-3.dev.yml
-    <<: *deploy-zk-3-variables
-
-.deploy-zk-1-production:
-  extends: .deploy-production
-  variables:
-    COMPOSE_FILE: docker-compose.${CI_PROJECT_NAME}-1.tmpl.yml:docker-compose.${CI_PROJECT_NAME}-1.prod.yml
-    <<: *deploy-zk-1-variables
-
-.deploy-zk-2-production:
-  extends: .deploy-production
-  variables:
-    COMPOSE_FILE: docker-compose.${CI_PROJECT_NAME}-2.tmpl.yml:docker-compose.${CI_PROJECT_NAME}-2.prod.yml
-    <<: *deploy-zk-2-variables
-
-.deploy-zk-3-production:
-  extends: .deploy-production
-  variables:
-    COMPOSE_FILE: docker-compose.${CI_PROJECT_NAME}-3.tmpl.yml:docker-compose.${CI_PROJECT_NAME}-3.prod.yml
-    <<: *deploy-zk-3-variables
-
-.deploy-support-branch: &deploy-support-branch
-  only:
-    - branches
-  except:
-    - master
-    - schedules
-
-deploy-zk-1-support-branch-development:
-  extends: .deploy-zk-1-development
-  <<: *deploy-support-branch
-
-deploy-zk-2-support-branch-development:
-  extends: .deploy-zk-2-development
-  <<: *deploy-support-branch
-
-deploy-zk-3-support-branch-development:
-  extends: .deploy-zk-3-development
-  <<: *deploy-support-branch
-
-.deploy-stable-branch: &deploy-stable-branch
-  only:
-    - master
-  except:
-    - schedules
-
-deploy-zk-1-stable-branch-development:
-  extends: .deploy-zk-1-development
-  <<: *deploy-stable-branch
-
-deploy-zk-2-stable-branch-development:
-  extends: .deploy-zk-2-development
-  <<: *deploy-stable-branch
-
-deploy-zk-3-stable-branch-development:
-  extends: .deploy-zk-3-development
-  <<: *deploy-stable-branch
-
-deploy-zk-1-stable-branch-production:
-  extends: .deploy-zk-1-production
-  <<: *deploy-stable-branch
-
-deploy-zk-2-stable-branch-production:
-  extends: .deploy-zk-2-production
-  <<: *deploy-stable-branch
-
-deploy-zk-3-stable-branch-production:
-  extends: .deploy-zk-3-production
-  <<: *deploy-stable-branch
-
-.deploy-tag: &deploy-tag
-  only:
-    - tags
-
-deploy-zk-1-tag-development:
-  extends: .deploy-zk-1-development
-  <<: *deploy-tag
-
-deploy-zk-2-tag-development:
-  extends: .deploy-zk-2-development
-  <<: *deploy-tag
-
-deploy-zk-3-tag-development:
-  extends: .deploy-zk-3-development
-  <<: *deploy-tag
-
-deploy-zk-1-tag-production:
-  extends: .deploy-zk-1-production
-  <<: *deploy-tag
-
-deploy-zk-2-tag-production:
-  extends: .deploy-zk-2-production
-  <<: *deploy-tag
-
-deploy-zk-3-tag-production:
-  extends: .deploy-zk-3-production
-  <<: *deploy-tag
