--- a/deploy/.env
+++ b/deploy/.env
@@ -1,10 +1,7 @@
-IMAGE_NAME=confluentinc/cp-zookeeper
-IMAGE_TAG=latest
-JMX_PROMETHEUS_JAVAAGENT_PATH=/jmx_prometheus_javaagent.jar
 JMX_HTTP_PORT=9998
-JMX_PROMETHEUS_CONFIG_PATH=/config.yaml
 ZOOKEEPER_CLIENT_PORT=2181
 KAFKA_JMX_PORT=9999
+
 ZOOKEEPER_TICK_TIME=2000
 ZOOKEEPER_INIT_LIMIT=5
 ZOOKEEPER_SYNC_LIMIT=2
@@ -12,3 +9,10 @@ ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT=3
 ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL=24
 ZOOKEEPER_SERVERS=zk-1:2888:3888;zk-2:2888:3888;zk-3:2888:3888
 ZOOKEEPER_LOG4J_ROOT_LOGLEVEL=ERROR
+
+JMX_PROMETHEUS_JAVAAGENT_PATH=/jmx_prometheus_javaagent.jar
+JMX_PROMETHEUS_CONFIG_PATH=/config.yaml
+
+ZK_SECRETS_VOL_NAME=zk-{{.Task.Slot}}-secrets-vol
+ZK_DATA_VOL_NAME=zk-{{.Task.Slot}}-data-vol
+ZK_LOG_VOL_NAME=zk-{{.Task.Slot}}-log-vol
